--- a/src/modules/ComboDashboard/components/TimeSliderToolbar/TimeSlider/TimeSlider.scss
+++ b/src/modules/ComboDashboard/components/TimeSliderToolbar/TimeSlider/TimeSlider.scss
@@ -2,7 +2,11 @@ $gold: #817618;
 
 .card {
     border-radius: 0;
+    box-shadow: none;
     width: 100%;
+    border-bottom: 1px solid rgb(209, 208, 208);
+
+
 
     .cardContent {
         padding: 0px;
