--- a/src/modules/ComboDashboard/components/TimeSliderToolbar/TimeSliderToolbar.scss
+++ b/src/modules/ComboDashboard/components/TimeSliderToolbar/TimeSliderToolbar.scss
@@ -1,31 +1,24 @@
 .card {
     border-radius: 0;
-    box-shadow: 0;
+    box-shadow: none;
+    border-right: 1px solid rgb(209, 208, 208);
+    border-bottom: 1px solid rgb(209, 208, 208);
 
     .collapseButton {
         outline: 0;
-        margin: 5px;
-        margin-right: 10px;
         padding: 5px;
-    }
-
-    .collapseContainer {
-        display: flex;
     }
 }
 
-.noShrink {
-        flex-shrink: 0;
-    }
+.expandedContainer {
+    display: flex;
+}
 
-    .row {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        z-index: 1;
-        padding: 8px;
-        pointer-events: none;
-    }
+.collapsedontainer {
+    display: flex;
+    min-height: 50px;
+}
+
+.noShrink {
+    flex-shrink: 0;
+}
